# ChangeLog for kde-base/kdepim-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-meta/ChangeLog,v 1.182 2011/06/02 22:05:14 dilfridge Exp $

  02 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdepim-meta-4.4.9.ebuild, -kdepim-meta-4.4.10.ebuild:
  Drop kdepim 4.4.9 and 4.4.10

  01 Jun 2011; Brent Baude <ranger@gentoo.org> kdepim-meta-4.4.11.1.ebuild:
  Marking kdepim-meta-4.4.11.1 ppc stable for bug 354033

  09 May 2011; Markos Chandras <hwoarang@gentoo.org>
  kdepim-meta-4.4.11.1.ebuild:
  Stable on amd64 wrt bug #354033

  09 May 2011; Thomas Kahle <tomka@gentoo.org> kdepim-meta-4.4.11.1.ebuild:
  x86 stable per bug 354033

*kdepim-meta-4.5.95 (23 Apr 2011)

  23 Apr 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdepim-meta-4.5.95.ebuild:
  Version bump KDEPIM 4.5.95 (4.6 beta 5)

  22 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  kdepim-meta-4.4.11.1.ebuild:
  Correctly depend on kde-4.6

*kdepim-meta-4.4.11.1 (21 Apr 2011)

  21 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kdepim-meta-4.4.11.1.ebuild:
  Version bump

  05 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org> 
  kdepim-meta-4.4.10.ebuild:
  Add localization support

  24 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdepim-meta-4.4.5.ebuild:
  Cleanup

  24 Mar 2011; Brent Baude <ranger@gentoo.org> kdepim-meta-4.4.9.ebuild:
  Marking kdepim-meta-4.4.9 ppc stable for bug 351345

  13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdepim-meta-4.4.6.ebuild, -kdepim-meta-4.4.7.ebuild,
  -kdepim-meta-4.4.8.ebuild:
  Drop older KDEPIM releases

  28 Jan 2011; Thomas Kahle <tomka@gentoo.org> kdepim-meta-4.4.9.ebuild:
  x86 stable per bug 351345

*kdepim-meta-4.4.10 (28 Jan 2011)

  28 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdepim-meta-4.4.10.ebuild:
  Version bump KDEPIM 4.4.10

  26 Jan 2011; Markos Chandras <hwoarang@gentoo.org> kdepim-meta-4.4.9.ebuild: