@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdepim-meta
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-meta/ChangeLog,v 1.182 2011/06/02 22:05:14 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-meta/ChangeLog,v 1.183 2011/06/06 20:34:43 abcd Exp $
+
+  06 Jun 2011; Jonathan Callen <abcd@gentoo.org> kdepim-meta-4.4.11.1.ebuild:
+  Switch to using the kde4-meta-pkg eclass
 
   02 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   -kdepim-meta-4.4.9.ebuild, -kdepim-meta-4.4.10.ebuild:
